# Robotics

first_project/: CMakeLists.txt  package.xml
first_project/launch/: first_project.launch
first_project/msg/: Odom.msg
first_project/src/: odom_node.cpp
second_project/: CMakeLists.txt  config_mapping.rviz  info.txt  package.xml  readme.txt  second_3D.pgm  second_3D.yaml  waypoints.csv
second_project/cfg/: 2D_laser_data_config.yaml  3D_laser_data_config.yaml  costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
second_project/launch/: 2D_laser_data.launch  3D_laser_data.launch  amcl.launch.xml  navigation.launch
second_project/map_raw/: first_2D.pgm  first_2D.yaml  first_3D.pgm  first_3D.yaml  second_2D.pgm  second_2D.yaml  second_3D.pgm  second_3D.yaml
second_project/src/: navigation.cpp  tf_publisher.cpp
second_project/stage/: second_3D.world  turtlebot.inc
